[package]
name = "zaryn_p2p"
version = "0.1.0"
authors = ["thewestdevop <oyeniyiadedayo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.5", features = [ "r2d2", "postgres", "chrono"] }
diesel_migrations = "1.4.0"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99.11"
dotenv = "0.15.0"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = "0.2"
float-ord = "0.3.0"
blake2 = "0.9.1"
rustc-serialize = "0.3.24"
